# rdrs

./: .dockerignore  ARCHITECTURE.md  Cargo.toml  Dockerfile  LICENSE.txt  README.md  SPEC.md  build.rs
.github/: dependabot.yml
.github/workflows/: ci.yml  docker.yml
src/: config.rs  error.rs  lib.rs  main.rs  version.rs
src/auth/: mod.rs  password.rs  webauthn.rs
src/db/: mod.rs  pool.rs  schema.rs
src/handlers/: admin.rs  auth.rs  category.rs  entry.rs  favicon.rs  feed.rs  health.rs  mod.rs  pages.rs  passkey.rs  proxy.rs  user.rs
src/middleware/: auth.rs  flash.rs  mod.rs
src/models/: category.rs  entry.rs  entry_summary.rs  feed.rs  image.rs  mod.rs  passkey.rs  session.rs  user.rs  user_settings.rs  webauthn_challenge.rs
src/services/: background.rs  feed_discovery.rs  feed_sync.rs  http.rs  icon_fetcher.rs  image_proxy.rs  mod.rs  opml.rs  readability.rs  sanitize.rs  summary_cache.rs  summary_cleanup.rs  summary_worker.rs
src/services/save/: linkding.rs  mod.rs
src/services/summarize/: kagi.rs  mod.rs
templates/: admin.html  base.html  categories.html  category_entries.html  change-password.html  entries.html  entries_archive.html  entry.html  feed_entries.html  feeds.html  home.html  login.html  macros.html  register.html  search.html  settings.html  unread.html  user-settings.html
tests/: auth_test.rs  entry_handlers_test.rs  handlers_test.rs  pages_test.rs
