[package]
name = "rdrs"
version = "0.1.0"
edition = "2021"

[lib]
name = "rdrs"
path = "src/lib.rs"

[[bin]]
name = "rdrs"
path = "src/main.rs"

[dependencies]
axum = "0.8"
tokio = { version = "1", features = ["full"] }
rusqlite = { version = "0.32", features = ["bundled"] }
askama = "0.12"
argon2 = "0.5"
rand = "0.8"
tower-http = { version = "0.6", features = ["fs", "trace"] }
tower = "0.5"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
chrono = { version = "0.4", features = ["serde"] }
thiserror = "2"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
axum-extra = { version = "0.10", features = ["cookie"] }

[dev-dependencies]
axum-test = "17"
cookie = "0.18"
