[package]
name = "rdrs"
version = "0.1.0"
edition = "2021"
description = "RSS Reader in Rust"

[lib]
name = "rdrs"
path = "src/lib.rs"

[[bin]]
name = "rdrs"
path = "src/main.rs"

[dependencies]
axum = "0.8"
tokio = { version = "1", features = ["full"] }
rusqlite = { version = "0.38", features = ["bundled"] }
askama = "0.15"
argon2 = "0.5"
rand = "0.8"
tower-http = { version = "0.6", features = ["fs", "trace"] }
tower = "0.5"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
chrono = { version = "0.4", features = ["serde"] }
dateparser = "0.2"
thiserror = "2"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
axum-extra = { version = "0.12", features = ["cookie"] }
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls", "charset", "http2", "json"] }
feed-rs = "2.1"
scraper = "0.22"
url = "2"
quick-xml = { version = "0.39", features = ["serialize"] }
ammonia = "4"
readability = { version = "0.3", default-features = false }
base64 = "0.22"
hmac = "0.12"
sha2 = "0.10"
webauthn-rs = { version = "0.5", features = ["danger-allow-state-serialisation"] }
webauthn-rs-proto = "0.5"
uuid = { version = "1", features = ["v4", "serde"] }
openssl = { version = "0.10", features = ["vendored"] }
moka = { version = "0.12", features = ["sync"] }
time = "0.3"

[build-dependencies]
resvg = "0.45"
image = "0.25"
ico = "0.4"

[dev-dependencies]
axum-test = "17"
cookie = "0.18"
tempfile = "3.24.0"
http-body-util = "0.1"
wiremock = "0.6"
